Changed the command name from Hello World to Erbify

--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
   "contributes": {
     "commands": [
       {
-        "command": "erbify.helloWorld",
-        "title": "Hello World"
+        "command": "erbify.erbify",
+        "title": "Erbify"
       }
     ]
   },
