--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
-    "@google/generative-ai": "^0.14.1"
+    "@google/generative-ai": "^0.14.1",
+    "@vscode/vsce": "^2.29.0"
   }
 }
