--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
   "dependencies": {
     "@google/generative-ai": "^0.14.1",
     "@langchain/google-genai": "^0.0.21",
-    "@vscode/vsce": "^2.29.0"
+    "@vscode/vsce": "^2.29.0",
+    "groq-sdk": "^0.7.0"
   }
 }
